--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,15 @@
 {
-    "files.associations": {
-        "iostream": "cpp",
-        "new": "cpp",
-        "string_view": "cpp",
-        "functional": "cpp"
-    }
+  "files.associations": {
+    "iostream": "cpp",
+    "new": "cpp",
+    "string_view": "cpp",
+    "functional": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "initializer_list": "cpp"
+  }
 }
